@@ -1,6 +1,10 @@
 1999-02-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* about.cc (show): Use gtk_grab_add/remove.
+	(finish_realize): Renamed and modified from handle_configure_event
+	for the "realize" signal.  Update all refs too.
+	(about_dialog): Add "realize" connection and remove
+	"configure_event".
 
 	* main.cc (parse_gtkrc) [PKGDATADIR]: Add gtk_rc_parse for default
 	gtkrc file.
